2004-02-10  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl: put cross manual reference and unicode related
	functions in the main program (instead of T2h_unicode.pm,
	T2h_nounicode.pm).
	Don't add no-... options when there are allready the options added.
	* T2h_unicode.pm, T2h_nounicode.pm: remove.

2004-02-07  Patrice Dumas  <dumas@centre-cired.fr> 

	* T2h_unicode.pm, T2h_nounicode.pm: make global variables lexical
	variables.
	* texi2html.init: output header if there is only one section.
	* Tests/: more tests for the new cross references scheme.
	* doc/: use a newer texinfo.tex. Be texi2dvi friendly.
	* Tests/Makefile.am: comment out check-local, it isn't ready.

2004-02-06  Derek Price  <derek@ximbiot.com>

	* T2h_unicode.pm, T2h_nounicode.pm: Declare some otherwise undeclared
	variables as global variables.

2004-02-06  Derek Price  <derek@ximbiot.com>

	* doc/Makefile.am (txt): New targets to convert .texinfo files into
	text.
	* doc/.cvsignore: Ignore texi2html.txt.

2004-02-06  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init, T2h_unicode.pm, T2h_nounicode.pm: 
	when called with --test, @today value is fixed.
	Find the relative path leading back to the current directory from
	the output directory, such that the path to the image files are right.
	Use a ref on the Texi2HTML::Config hashes such that changing the
	hash used is easy. This is used in T2h_unicode.pm and 
	T2h_nounicode.pm for expansion of nodes in external refs.
	Add special styles early.
	A new variable NEW_CROSSREF_STYLE. If true the new scheme for html 
	cross refs proposed onthe texinfo list is used for @ref.
	* Tests/formatting/test_refs.texi, Tests/formatting/cross_refs.init: 
	new files used to test the new cross ref scheme.

2004-02-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: call the $index_summary_file_* 
	function references for all the indices, even those not printed. 